Fix tree visibility

--- a/src/app/pages/user-detail/user-detail.component.scss
+++ b/src/app/pages/user-detail/user-detail.component.scss
@@ -28,6 +28,10 @@
   }
 }
 
+.dropdown-toggle:after {
+  font-size: 18px !important;
+}
+
 .container {
   padding: 16px 32px;
 
